fix: header and sidebar aligned with rem (#34)

--- a/src/app/shared/components/header/header.component.less
+++ b/src/app/shared/components/header/header.component.less
@@ -36,8 +36,8 @@
         display: flex;
         list-style: none;
         justify-content: center;
-        gap: 2rem;
         li {
+          margin-right: 2rem;
           a {
             color: @header-font-white;
             text-decoration: none;
@@ -128,6 +128,10 @@
             height: 100%;
             align-items: center;
             padding: 0;
+            li {
+              margin-bottom: 2rem;
+              margin-right: 0;
+            }
           }
         }
       }
